--- a/src/components/board/Board.style.css
+++ b/src/components/board/Board.style.css
@@ -69,3 +69,41 @@
   margin-left: 3.4rem;
   display: flex;
 }
+
+
+.PathNorth {
+  width: 0.2rem;
+  height: 1.8rem;
+  position: absolute;
+  margin-left: 1.7rem;
+}
+
+.PathSouth {
+  width: 0.2rem;
+  height: 1.8rem;
+  position: absolute;
+  margin-top: 1.8rem;
+  margin-left: 1.7rem;
+}
+
+.PathEast {
+  width: 1.8rem;
+  height: 0.2rem;
+  position: absolute;
+  margin-top: 1.7rem;
+  margin-left: 1.8rem;
+}
+
+.PathWest {
+  width: 1.8rem;
+  height: 0.2rem;
+  position: absolute;
+  margin-top: 1.7rem;
+}
+
+
+.Piece {
+  display: flex;
+  margin: auto;
+}
+
