--- a/src/components/board/Board.style.css
+++ b/src/components/board/Board.style.css
@@ -1,7 +1,7 @@
 .Board {
   width: fit-content;
   height: fit-content;
-  background-color: darkgreen;
+  background-color: burlywood;
   margin: auto;
 }
 
@@ -14,20 +14,15 @@
 
 
 .Tile {
-  width: 3.6rem;
-  height: 3.6rem;
+  width: 50px;
+  height: 50px;
   background-color: whitesmoke;
-  margin: auto;
-
+  margin: 0;
 }
 
-.TileCenter {
-  width: 3rem;
-  height: 3rem;
-  position: absolute;
-  margin-left: 0.3rem;
-  margin-top: 0.3rem;
-  display: flex;
+.TileCorner {
+  width: 10%;
+  height: 100%;
 }
 
 
