Add functionality choosing and changing current piece

--- a/src/components/board/Board.style.css
+++ b/src/components/board/Board.style.css
@@ -9,7 +9,13 @@
   display: flex;
 }
 
-
+.TileButton {
+  background-color: inherit;
+  padding: 0;
+  border: 0;
+  margin: auto;
+  display: flex;
+}
 
 
 
