--- a/src/components/hub/Hub.style.css
+++ b/src/components/hub/Hub.style.css
@@ -8,10 +8,11 @@
 }
 
 .GameState {
-  width: 100%;
+  width: 60%;
   height: 100px;
   background-color: red;
   display: flex;
+  margin: auto;
 
 }
 
