--- a/src/components/hub/Hub.style.css
+++ b/src/components/hub/Hub.style.css
@@ -16,6 +16,32 @@
 
 }
 
+
+.MoveDisplay {
+/* 
+  width: fit-content;
+ */
+  width: 200px;
+
+  height: 60px;
+  background-color: white;
+  display: flex;
+  margin: auto;
+}
+
+.MoveDataDisplay {
+  width: 40%;
+  height: 100%;
+  margin: auto;
+}
+
+.MoveDataValue {
+  width: 100%;
+  height: 40%;
+  display: flex;
+  margin: auto;
+}
+
 .PieceSelector {
   display: flex;
   width: 60%;
