--- a/src/components/toolbar/Toolbar.style.css
+++ b/src/components/toolbar/Toolbar.style.css
@@ -1,18 +1,15 @@
 .Toolbar {
-  background-color: burlywood;
   width: 200px;
   height: 800px;
 }
 
 .Section {
-  background-color: greenyellow;
   width: 100%;
   height: fit-content;
   margin: auto;
 }
 
 .MoveData {
-  background-color: greenyellow;
   width: 100%;
   height: fit-content;
   margin: auto;
@@ -35,13 +32,19 @@
 
 
 
+.ButtonContainer {
+  width: 80%;
+  height: 60px;
+  margin: auto;
+  display: flex;
+}
+
 
 .Button {
   background-color: whitesmoke;
-  width: 80%;
+  width: 100%;
   height: 50px;
   margin: auto;
-  margin-block: 10px;
   display: flex;
   padding: 0%;
   border: 0;
