--- a/src/components/toolbar/Toolbar.style.css
+++ b/src/components/toolbar/Toolbar.style.css
@@ -1,6 +1,7 @@
 .Toolbar {
   width: 200px;
   height: 100%;
+  background-color: bisque;
 }
 
 .Section {
@@ -14,7 +15,6 @@
   margin: auto;
   height: 10%;
   display: flex;
-  background-color: pink;
 }
 
 .MoveDataDisplay {
@@ -41,7 +41,7 @@
 
 
 .Button {
-  background-color: whitesmoke;
+  background-color: lightgray;
   width: 100%;
   height: 50px;
   margin: auto;
