--- a/src/components/toolbar/Toolbar.style.css
+++ b/src/components/toolbar/Toolbar.style.css
@@ -1,7 +1,7 @@
 .Toolbar {
-  width: 200px;
+  min-width: 200px;
+  width: fit-content;
   height: 100%;
-  background-color: bisque;
 }
 
 .Section {
